# DL-animal-10

./: .gitignore  main.py  pyproject.toml
data/: kaggle_data_download.py
mlruns/0/: meta.yaml
mlruns/371523339529422074/: meta.yaml
mlruns/371523339529422074/7611537268e4442e93ea1f4d985f6b35/: meta.yaml
mlruns/371523339529422074/7611537268e4442e93ea1f4d985f6b35/metrics/: accuracy  epoch_time_s  test_loss  train_loss
mlruns/371523339529422074/9cd80b55e0e8437ebffe03292d958106/: meta.yaml
mlruns/371523339529422074/9cd80b55e0e8437ebffe03292d958106/metrics/: accuracy  epoch_time_s  test_loss  train_loss
mlruns/371523339529422074/9cd80b55e0e8437ebffe03292d958106/tags/: mlflow.source.name
notebooks/: animal_10.ipynb
src/: animal_10.py  data_etl.py  helper_functions.py  main.py
src/data/: data_etl.py
src/models/: training.py
src/models/animal_classifier_with_sig/: MLmodel  conda.yaml  input_example.json  python_env.yaml  requirements.txt
src/utils/: helper_functions.py
tests/: re_save.py  test_serve.py
