[project]
name = "dl-animal-10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kagglehub>=0.3.12",
    "lab>=8.4",
    "mlflow>=3.1.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "typer>=0.16.0",
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.scripts]
train-animal-10 = "main:main"
